--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <title>home-work-js-1</title>
   </head>
   <body>
-    <script src="js/task-1.js"></script>
-    <script src="js/task-2.js"></script>
-    <script src="js/task-3.js"></script>
+    <header></header>
+    <main>
+      <h1>Hello Max</h1>
+      <script src="js/task-1.js"></script>
+      <script src="js/task-2.js"></script>
+      <script src="js/task-3.js"></script>
+    </main>
+    <footer></footer>
   </body>
 </html>
