--- a/index.html
+++ b/index.html
@@ -4,15 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>home-work-js-1</title>
-    <script src="js/task-1.js"></script>
-    <script src="js/task-2.js"></script>
-    <script src="js/task-3.js"></script>
+    <script src="js/task-1.js" defer></script>
+    <script src="js/task-2.js" defer></script>
+    <script src="js/task-3.js" defer></script>
   </head>
-  <body>
-    <header></header>
-    <main>
-      <h1>Hello Max</h1>
-    </main>
-    <footer></footer>
-  </body>
+  <body></body>
 </html>
