--- a/index.html
+++ b/index.html
@@ -11,16 +11,12 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <ul>
-      <li><a href="./task-1.html">Task 1</a></li>
-      <li><a href="./task-2.html">Task 2</a></li>
-      <li><a href="./task-3.html">Task 3</a></li>
-      <li><a href="./task-4.html">Task 4</a></li>
-      <li><a href="./task-5.html">Task 5</a></li>
-      <li><a href="./task-6.html">Task 6</a></li>
-    </ul>
+    <main>
+      <ul class="gallery"></ul>
+    </main>
+    <script src="./js/gallery.js"></script>
   </body>
 </html>
