--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -6,9 +6,11 @@
     <title>Gallery</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="body-gallery">
     <header></header>
-    <main></main>
+    <main>
+      <ul class="gallery"></ul>
+    </main>
     <footer></footer>
     <script type="module" src="js/1-gallery.js"></script>
   </body>
