--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>Hello Max</header>
+    <header><load ="./logo.html" /></header>
     <main>
       <ul>
         <li><a href="./1-gallery.html">gallery</a></li>
         <li><a href="./2-form.html">form</a></li>
       </ul>
     </main>
-    <footer>this is footer</footer>
+    <footer></footer>
     <script type="module" src="./js/1-gallery.js"></script>
     <script type="module" src="./js/2-form.js"></script>
   </body>
