--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header><load ="./logo.html" /></header>
+    <header></header>
     <main>
       <ul>
         <li><a href="./1-gallery.html">gallery</a></li>
