--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -12,6 +12,6 @@
       <ul class="gallery"></ul>
     </main>
     <footer></footer>
-    <script src="js/1-gallery.js" type="module"></script>
+    <script src="./js/1-gallery.js" type="module"></script>
   </body>
 </html>
